--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ djangorestframework = "^3.11.0"
 black = "^19.10b0"
 coverage = {extras = ["toml"], version = "^5.1"}
 
+[tool.black]
+line-length = 120
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
