--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "drf-triad-permissions"
-version = "0.2.0"
+version = "0.3.0"
 description = "Django Rest Framework viewset permissions through triads"
 license = "MIT"
 authors = ["Lorenzo Peña <lorinkoz@gmail.com>"]
@@ -22,11 +22,25 @@ django = ">=2.0,<4.0"
 djangorestframework = "^3.11.0"
 
 [tool.poetry.dev-dependencies]
-black = "^19.10b0"
+black = "^20.8b1"
 coverage = {extras = ["toml"], version = "^5.1"}
+flake8 = "^3.8.4"
+flake8-bugbear = "^20.11.1"
+flake8-comprehensions = "^3.3.1"
+flake8-no-types = "^1.1.1"
+flake8-tidy-imports = "^4.2.1"
+isort = "^5.6.4"
 
 [tool.black]
 line-length = 120
+
+[tool.isort]
+atomic = true
+profile = "black"
+sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+known_django = ["django", "rest_framework"]
+combine_as_imports = true
+line_length = 120
 
 [tool.coverage.run]
 source = ["drf_triad_permissions"]
