--- a/.github/workflows/linters.yaml
+++ b/.github/workflows/linters.yaml
@@ -9,10 +9,17 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.6
-      - name: Install dependencies
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/pypoetry
+          key: poetry-linters-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            poetry-linters-
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade black
-      - name: Run linters
+          python -m pip install poetry pre-commit
+          python -m poetry install
+      - name: Run Linters
         run: |
-          black --check --exclude "migrations" drf_triad_permissions
+          python -m pre-commit run --all-files
